syntax = "proto3";

package api.console.administration;

option go_package = "github.com/omalloc/kratos-console/api/console/administration;administration";
option java_multiple_files = true;
option java_package = "api.console.administration";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protobuf/pagination.proto";
import "console/administration/permission.proto";

service Role {
	rpc CreateRole (CreateRoleRequest) returns (CreateRoleReply) {
		option (google.api.http) = {
			post: "/api/console/role"
			body: "*"
		};
	}
	rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleReply) {
		option (google.api.http) = {
			put: "/api/console/role/{id}",
			body: "*"
		};
	}
	rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleReply) {
		option (google.api.http) = {
			delete: "/api/console/role/{id}"
		};
	}
	rpc GetRole (GetRoleRequest) returns (GetRoleReply) {
		option (google.api.http) = {
			get: "/api/console/role/{id}"
		};
	}
	rpc ListRole (ListRoleRequest) returns (ListRoleReply) {
		option (google.api.http).get = "/api/console/role";
	}
	rpc BindPermission (BindPermissionRequest) returns (BindPermissionReply) {
		option (google.api.http) = {
			put: "/api/console/role/{id}/permission"
			body: "*"
		};
	}
	rpc UnbindPermission (UnbindPermissionRequest) returns (UnbindPermissionReply) {
		option (google.api.http) = {
			put: "/api/console/role/{id}/permission/{permission_id}"
			body: "*"
		};
	}
	rpc GetAll (GetAllRequest) returns (GetAllReply) {
		option (google.api.http) = {
			get: "/api/console/role-all"
		};
	}
}

message RolePermission {
	// 业务id
	int64 id = 1;
	// 角色id
	int64 role_id = 2;
	// 权限id
	int64 perm_id = 3;
	// 操作权限
	repeated Action actions = 4;
	// 数据权限
	repeated Action data_access = 5;
	// 绑定权限时间
	google.protobuf.Timestamp created_at = 6;
}

message RoleInfo {
	int64 id = 1;
	string name = 2;
	string alias = 3;
	string describe = 4;
	int32 status = 5;
	repeated RolePermission permissions = 6;
	// repeated Action actions = 5;
	// repeated Action data_access = 6;
}

message CreateRoleRequest {
	string name = 1;
	string describe = 2;
	int32 status = 3;
	string alias = 4;
}
message CreateRoleReply {}

message UpdateRoleRequest {
	int64 id = 1;
	string name = 2;
	string describe = 3;
	int32 status = 4;
	string alias = 5;
}
message UpdateRoleReply {}

message DeleteRoleRequest {
	int64 id = 1;
}
message DeleteRoleReply {}

message GetRoleRequest {
	int64 id = 1;
}
message GetRoleReply {
	int64 id = 1;
	string name = 2;
	string alias = 3;
	string describe = 4;
	int32 status = 5;
	repeated RolePermission permissions = 6;
	repeated Action actions = 7;
	repeated Action data_access = 8;
}

message ListRoleRequest {
	protobuf.Pagination pagination = 1;
}

message ListRoleReply {
	protobuf.Pagination pagination = 1;
	repeated RoleInfo data = 2;
}

message BindPermissionRequest {
	int64 id = 1;
	repeated BindPermissionBodyRequest data = 2;
}

message BindPermissionBodyRequest {
	int64 permission_id = 2;
	repeated Action actions = 3;
	repeated Action data_access = 4;
}
message BindPermissionReply {}


message UnbindPermissionRequest {
	int64 id = 1;
	int64 permission_id = 2;
}
message UnbindPermissionReply {}

message GetAllRequest {}
message GetAllReply {
	repeated RoleInfo data = 1;
}